<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, QQDemoActivity!</string>
    <string name="app_name">QQDemo</string>
    
    <string name="login_name">name</string>
    <string name="login_password">password</string>
    <string name="send_content">content</string>
    <!-- button -->
    <string name="login">login</string>
    <string name="register">register</string>
    <string name="more">more</string>
    <string name="send">send</string>
    <string name="camara">camara</string>
    <string name="file">file</string>
    <string name="record">record</string>
    <string name="delete">delete</string>
    <string name="start_recording">start recording</string>
    <string name="stop_recording">stop recording</string>
    <string name="start_playing">start playing</string>
    <string name="stop_playing">stop playing</string>
    <string name="cancel">cancel</string>
    
    <string name="image">image</string>
    <string name="audio">audio</string>

</resources>