<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF0000"
    >
    <LinearLayout 
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_centerInParent="true"
    	android:orientation="vertical" >

	    <EditText
	        android:id="@+id/input_name"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:paddingTop="10dp"
	        android:paddingBottom="10dp"
	        android:singleLine="true"
	        android:hint="@string/login_name" />
	    
	    <EditText
	        android:id="@+id/input_password"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:paddingTop="10dp"
	        android:paddingBottom="10dp"
	        android:singleLine="true"
	        android:hint="@string/login_password" />
	    
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
	        <Button android:id="@+id/register"
	            android:layout_width="0dp"
	            android:layout_weight="1"
	            android:layout_height="wrap_content"
	            android:text="@string/register"/>
	        <Button android:id="@+id/login"
	            android:layout_width="0dp"
	            android:layout_weight="1"
	            android:layout_height="wrap_content"
	            android:text="@string/login"/>
	    </LinearLayout>
    
	</LinearLayout>
    
</RelativeLayout>
